<resources>
    <string name="app_name">TheMovieApp</string>
    <string name="lbl_discover">Discover</string>
    <string name="lbl_search">search</string>
    <string name="banner_movie_1_name">The Wolverine 2013\nOffical Review</string>
    <string name="banner_movie_2_name">The Fantastic 4\nOfficial Review</string>
    <string name="banner_movie_3_name">The Lovely Bones\nOfficial Review</string>
    <string name="lbl_best_popular_films_and_serials_label">BEST POPULAR FILMS AND SERIALS</string>
    <string name="popular_movie_1_name">Westworld</string>
    <string name="popular_movie_2_name">Call</string>
    <string name="popular_movie_3_name">Jurassic World</string>
    <string name="popular_movie_4_name">Spider-Man: No..</string>
    <string name="popular_movie_5_name">The Lovely Bones</string>
    <string name="popular_movie_6_name">World War Z</string>
    <string name="lbl_check_movie_show_time">Check Movie\nShowtimes</string>
    <string name="lbl_see_more"><u>SEE MORE</u></string>
    <string name="lbl_show_case">SHOWCASES</string>
    <string name="lbl_more_showcases"><u>MORE SHOWCASES</u></string>
    <string name="lbl_best_actors">BEST ACTORS</string>
    <string name="lbl_more_actors"><u>MORE ACTORS</u></string>
    <string name="lbl_actor_name">Robert Downey Jr.</string>
    <string name="lbl_like_quantity">YOU LIKE 15 MOVIES</string>
    <string name="lbl_show_case_movie">Westworld</string>
    <string name="lbl_movie_detail_name">Fantastic Beasts And Where to Find Them</string>
    <string name="lbl_release_year">2016</string>
    <string name="text_movie_storyline">The year is 1926, and Newt Scamander (Eddie Redmayne) has just completed a global excursion to find and document an extraordinary array of magical creatures. Arriving in New York for a brief stopover, he might have come and gone without incident, were it not for a No-Maj (American for Muggle) named Jacob, a misplaced magical case, and the escape of some of Newt\'s fantastic beasts, which could spell trouble for both the wizarding and No-Maj worlds.</string>
    <string name="lbl_story_line">STORYLINE</string>
    <string name="lbl_play_trailer">PLAY TRAILER</string>
    <string name="lbl_rate_movie">RATE MOVIE</string>
    <string name="lbl_actors">ACTORS</string>
    <string name="lbl_creators">CREATORS</string>
    <string name="lbl_more_creators"><u>MORE CREATORS</u></string>
    <string name="lbl_original_title">Original Title: </string>
    <string name="lbl_type">Type:</string>
    <string name="txt_types">Family, Fantasy, Adventure</string>
    <string name="lbl_production">Production:</string>
    <string name="txt_production">United Kindgom, USA</string>
    <string name="lbl_premiere">Premiere:</string>
    <string name="txt_premiere">8 November 2016 (World)</string>
    <string name="lbl_description">Description:</string>
    <string name="lbl_about_film">ABOUT FILM</string>
    <string name="lbl_hint_search">Search</string>
</resources>